# Neuvox

./: .dockerignore  .env.phase2.example  .gitignore  API_CONTRACT.md  DATA_SPEC.md  Dockerfile  EVAL_SPEC.md  FRD.md  GUVI_TEST_REPORT.md  HUGGINGFACE_DEPLOY.md  LICENSE  MISSING.md  NEXT_IMPROVEMENTS.md  PHASE_2_ARCHITECTURE.md  PHASE_2_CHECKLIST.md  PHASE_2_IMPLEMENTATION_PROMPTS.md  PHASE_2_INDEX.md  PHASE_2_MASTER_INDEX.md  PHASE_2_QUICK_REFERENCE.md  PHASE_2_README.md  PHASE_2_START_HERE.md  PHASE_2_SUMMARY.md  PHASE_2_VOICE_IMPLEMENTATION_PLAN.md  PHASE_2_WORKFLOW.md  POSTGRES_SETUP.md  PRD.md  README.md  TASKS.md  THREAT_MODEL.md  docker-compose.yml  env.example  guvi_compliance_test.py  guvi_submit_check_plan.md  guvi_test_results.json  pyproject.toml  requirements-dev.txt  requirements-local.txt  requirements-phase2.txt  requirements.txt
Docs/: Apiendpointand submit.md  CHANGES_AND_RATIONALE.md  Doc.md  FINAL_IMPLEMENTATION_SPEC.md  TECH_STACK_SUMMARY.md  final_api_endpoint_build.md
Final Submission/: Agentic Honey-Pot  Sample Scenarios for Evaluation.md  Honeypot API Evaluation System Documentation.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_VERIFICATION.md
PPT/: FIXED_LAYOUT_SUMMARY.md  PPT_IMPROVEMENTS_SUMMARY.md  SUBMISSION_CHECKLIST.md  Slides.txt  presentation_format_extracted.txt  sample_ppt_structure.txt
app/: __init__.py  config.py  main.py
app/agent/: __init__.py  context_engine.py  emotions.py  enhanced_honeypot.py  honeypot.py  personas.py  prompts.py  psychology.py  safety.py  scam_detector_v2.py  strategies.py
app/api/: __init__.py  auth.py  endpoints.py  schemas.py  voice_endpoints.py  voice_schemas.py
app/database/: __init__.py  chromadb_client.py  models.py  postgres.py  redis_client.py
app/models/: __init__.py  detector.py  extractor.py  language.py
app/utils/: __init__.py  groq_client.py  guvi_callback.py  logger.py  metrics.py  preprocessing.py  response_scorer.py  validation.py
app/voice/: __init__.py  asr.py  tts.py
data/: .gitkeep
scripts/: INDICBERT_DOWNLOAD_GUIDE.md  create_buildathon_ppt.py  create_comprehensive_ppt.py  create_fixed_ppt.py  download_indicbert_alternative.py  download_indicbert_simple.py  evaluate_detector.py  extract_pdf_and_inspect_ppt.py  fine_tune_indicbert.py  fix_postgres_permissions.py  fix_postgres_permissions.sql  generate_dataset.py  init_database.py  inspect_generated_ppt.py  run_performance_tests.py  run_red_team_tests.py  setup_models.py  test_database_connections.py  test_deployment.py  test_full_conversation.py  test_groq_api.py  test_guvi_integration.py  test_huggingface_token.py  test_indicbert_download.py  test_postgres_connection.py  test_task_3_1_verification.py  test_task_3_2_verification.py  validate_dataset.py  verify_final_ppt.py  verify_task_2_3.py  verify_task_3_1.py  verify_task_3_2.py  verify_task_4_1.py
tests/: __init__.py  conftest.py  guvi_evaluation_test.py  guvi_fast_test.py  guvi_quick_test.py
tests/acceptance/: __init__.py
tests/integration/: __init__.py  test_api.py  test_e2e.py  test_voice_api.py
tests/performance/: __init__.py  conftest.py  test_load.py
tests/security/: __init__.py  conftest.py  test_red_team.py
tests/unit/: test_config.py  test_database_models.py  test_dataset.py  test_detector.py  test_extractor.py  test_groq_client.py  test_groq_config.py  test_honeypot.py  test_language.py  test_logger.py  test_main.py  test_metrics.py  test_model_loading.py  test_personas.py  test_postgres.py  test_preprocessing.py  test_prompts.py  test_redis.py  test_schemas.py  test_strategies.py  test_validation.py  test_voice_asr.py  test_voice_tts.py
ui/: app.js  guvi-test.css  guvi-test.html  guvi-test.js  index.html  styles.css  voice.css  voice.html  voice.js
